make footer slightly larger to try to avoid tap targets too close together

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1,7 +1,7 @@
 @import "../variables.css";
 
 .wrapper {
-  min-height: 95vh;
+  min-height: 93vh;
 }
 
 .container {
