--- a/src/Copyright/Copyright.css
+++ b/src/Copyright/Copyright.css
@@ -1,5 +1,5 @@
 .wrapper {
-  min-height: 95vh;
+  min-height: 93vh;
   overflow-y:hidden;
 }
 
