--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 .container {
-  height: 95vh;
+  height: 93vh;
   width: 100%;
   display: flex;
   align-items: center;
