--- a/src/index.css
+++ b/src/index.css
@@ -40,5 +40,5 @@ a:visited {
 
 .footer {
   width: 100%;
-  height: 5vh;
+  height: 7vh;
 }
